# PiAA_Gra

./: CMakeLists.txt
include/: board.hpp  game.hpp  interface.hpp  piece.hpp
include/interface/: cScreen.hpp  gameScreen.hpp  loadGameScreen.hpp  screens.hpp  settingsScreen.hpp  startScreen.hpp
include/minimax/: algorithm.hpp
src/: algorithm.cpp  board.cpp  game.cpp  gameScreen.cpp  main.cpp  settingsScreen.cpp  startScreen.cpp  web_ver.cpp
